--- a/runs/sim-study/configs/test-sim-6-8-5/tsne/report/tsne-simdat.tex
+++ b/runs/sim-study/configs/test-sim-6-8-5/tsne/report/tsne-simdat.tex
@@ -114,7 +114,7 @@ The TSNE embeddings were colored by clusterings from the two clustering
 methods. \\
 
 In each page of the document, there are 20 graphs.  The rows vary by model
-(FlowSOM, Mclust-VII, FAM, rFAP-$\phi=1$, truth).  The first two columns are
+(FlowSOM, Mclust-VII, FAM, rFAM-$\phi=100$, truth).  The first two columns are
 for the complete data; whereas the next two columns are for the data with
 imputed missing values. In the case of the FAM and rFAM, the imputation was
 done during the MCMC in order to obtain the clusters. But for more consistency,
