--- a/runs/patients/runs/run11/tex/imgtemplate.tex
+++ b/runs/patients/runs/run11/tex/imgtemplate.tex
@@ -6,8 +6,13 @@
     \includegraphics[scale=#2]{\imgdir/phi0/img/#1} &
     \includegraphics[scale=#2]{\imgdir/phi1/img/#1} \\
     %
-    (c) $\phi=100$ &
-    (d) $\phi=10000$ \\
+    (c) $\phi=10$ &
+    (d) $\phi=50$ \\
+    \includegraphics[scale=#2]{\imgdir/phi10/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/phi50/img/#1} \\
+    %
+    (e) $\phi=100$ &
+    (f) $\phi=10000$ \\
     \includegraphics[scale=#2]{\imgdir/phi100/img/#1} &
     \includegraphics[scale=#2]{\imgdir/phi10000/img/#1} \\
   \end{tabular}
