--- a/runs/sim-study/configs/test-sim-6-8-6/tex/imgtemplate.tex
+++ b/runs/sim-study/configs/test-sim-6-8-6/tex/imgtemplate.tex
@@ -10,9 +10,9 @@
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi0-zind1/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi0-zind2/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi0-zind3/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi0-zind1/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi0-zind2/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi0-zind3/img/#1} \\
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi0-zind1/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi0-zind2/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi0-zind3/img/#1} \\
     %
     {\tiny (g) $Z^1$, Complete, $\phi=1$} &
     {\tiny (h) $Z^2$, Complete, $\phi=1$}&
@@ -24,36 +24,50 @@
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi1-zind1/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi1-zind2/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi1-zind3/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi1-zind1/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi1-zind2/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi1-zind3/img/#1} \\
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi1-zind1/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi1-zind2/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi1-zind3/img/#1} \\
     %
-    {\tiny (m) $Z^1$, Complete, $\phi=25$} &
-    {\tiny (n) $Z^2$, Complete, $\phi=25$} &
-    {\tiny (o) $Z^3$, Complete, $\phi=25$} &
-    {\tiny (p) $Z^1$, Missing,  $\phi=25$} &
-    {\tiny (q) $Z^2$, Missing,  $\phi=25$} &
-    {\tiny (r) $Z^3$, Missing,  $\phi=25$} \\
+    {\tiny (m) $Z^1$, Complete, $\phi=10$} &
+    {\tiny (n) $Z^2$, Complete, $\phi=10$}&
+    {\tiny (o) $Z^3$, Complete, $\phi=10$} &
+    {\tiny (p) $Z^1$, Missing, $\phi=10$} &
+    {\tiny (q) $Z^2$, Missing, $\phi=10$} &
+    {\tiny (r) $Z^3$, Missing, $\phi=10$} \\
+    %
+    \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi10-zind1/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi10-zind2/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi10-zind3/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi10-zind1/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi10-zind2/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi10-zind3/img/#1} \\
+    %
+    {\tiny (s) $Z^1$, Complete, $\phi=25$} &
+    {\tiny (t) $Z^2$, Complete, $\phi=25$} &
+    {\tiny (u) $Z^3$, Complete, $\phi=25$} &
+    {\tiny (v) $Z^1$, Missing,  $\phi=25$} &
+    {\tiny (w) $Z^2$, Missing,  $\phi=25$} &
+    {\tiny (x) $Z^3$, Missing,  $\phi=25$} \\
     %
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi25-zind1/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi25-zind2/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi25-zind3/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi25-zind1/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi25-zind2/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi25-zind3/img/#1} \\
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi25-zind1/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi25-zind2/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi25-zind3/img/#1} \\
     %
-    {\tiny (s) $Z^1$, Complete, $\phi=100$} &
-    {\tiny (t) $Z^2$, Complete, $\phi=100$} &
-    {\tiny (u) $Z^3$, Complete, $\phi=100$} &
-    {\tiny (v) $Z^1$, Missing,  $\phi=100$} &
-    {\tiny (w) $Z^2$, Missing,  $\phi=100$} &
-    {\tiny (x) $Z^3$, Missing,  $\phi=100$} \\
+    {\tiny (y) $Z^1$, Complete, $\phi=100$} &
+    {\tiny (z) $Z^2$, Complete, $\phi=100$} &
+    {\tiny ($\alpha$) $Z^3$, Complete, $\phi=100$} &
+    {\tiny ($\beta$) $Z^1$, Missing,  $\phi=100$} &
+    {\tiny ($\gamma$) $Z^2$, Missing,  $\phi=100$} &
+    {\tiny ($\delta$) $Z^3$, Missing,  $\phi=100$} \\
     %
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi100-zind1/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi100-zind2/img/#1} &
     \includegraphics[scale=#2]{\imgdir/pmiss0.0-phi100-zind3/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi100-zind1/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi100-zind2/img/#1} &
-    \includegraphics[scale=#2]{\imgdir/pmiss0.6-phi100-zind3/img/#1} \\
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi100-zind1/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi100-zind2/img/#1} &
+    \includegraphics[scale=#2]{\imgdir/pmiss0.2-phi100-zind3/img/#1} \\
   \end{tabular}
 }
